# graph-context

./: README.md  pyproject.toml
.cursor/rules/: cursor-architecture-rules.mdc  cursor-refactoring-guide.mdc
.github/workflows/: publish.yml  tests.yml
docs/: caching-design.md
src/graph_context/: __init__.py  context_base.py  event_system.py  exceptions.py  interface.py  store.py  traversal.py
src/graph_context/caching/: __init__.py  cache_manager.py  cache_store.py  cached_context.py  config.py
src/graph_context/interfaces/: store.py
src/graph_context/manager/: entity_manager.py  query_manager.py  relation_manager.py
src/graph_context/stores/: memory_store.py
src/graph_context/types/: __init__.py  type_base.py  validators.py
src/graph_context/validation/: schema_validator.py
tests/graph_context/: test_cached_context.py  test_context_base.py  test_entity_manager.py  test_event_system.py  test_exceptions.py  test_factory.py  test_interface.py  test_query_manager.py  test_relation_manager.py  test_schema_validator.py  test_store.py  test_store_integration.py  test_transaction_manager.py  test_traversal.py
tests/graph_context/caching/: test_cache_manager.py  test_cache_store.py  test_cache_store_manager.py  test_cached_context.py  test_config.py
tests/graph_context/stores/: test_memory_store.py
tests/graph_context/types/: test_type_base.py  test_validators.py
